Bug fixes - Button Start/Stop sync + logo for notif

--- a/Plugin/popup.html
+++ b/Plugin/popup.html
@@ -25,7 +25,7 @@
         text-transform: uppercase;
         text-align: center;
         color: white;
-        background-image: -webkit-linear-gradient(top,#EA464A,#D43C40);
+        background-image: -webkit-linear-gradient(top,#5cb85c,#4cae4c);
         font-family: arial;
         font-weight: bold;
         line-height: 30px;
@@ -62,7 +62,7 @@
     </div>
     
     <!-- Used only to display debug informations-->
-    <a href='#stop' id='stop'>STOP</a>
+    <a href='#stop' id='stop'>START</a>
     <a href='./vulns.html' target=_blank id='export'>LIST</a>
     <div id='debug'>
       <span id='status'>Status Server</span>
