--- a/Plugin/vulns.html
+++ b/Plugin/vulns.html
@@ -27,7 +27,7 @@
         text-transform: uppercase;
         text-align: center;
         color: white;
-        background-image: -webkit-linear-gradient(top,#EA464A,#D43C40);
+        background-image: -webkit-linear-gradient(top,#5cb85c,#4cae4c);
         font-family: arial;
         font-weight: bold;
         line-height: 30px;
@@ -43,8 +43,8 @@
       .datagrid {font: normal 12px/150% Arial, Helvetica, sans-serif; background: #fff; overflow: hidden; border: 1px solid #006699; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
       .datagrid table td, .datagrid table th { padding: 3px 16px; }
       .datagrid table thead th {background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #006699), color-stop(1, #00557F) );background:-moz-linear-gradient( center top, #006699 5%, #00557F 100% );filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#006699', endColorstr='#00557F');background-color:#006699; color:#FFFFFF; font-size: 15px; font-weight: bold; border-left: 1px solid #0070A8; } 
-      .datagrid table thead th:first-child { border: none; }
-      .datagrid table tbody td { color: #00557F; border-left: 1px solid #E1EEF4;font-size: 12px;font-weight: normal; }
+      .datagrid table thead th:first-child {padding:8px; border: none; }
+      .datagrid table tbody td {padding:8px; color: #00557F; border-left: 1px solid #E1EEF4;font-size: 12px;font-weight: normal; }
       .datagrid table tbody .alt td { background: #E1EEf4; color: #00557F; }
       .datagrid table tbody td:first-child { border-left: none; }.datagrid table tbody tr:last-child td { border-bottom: none; }
       .datagrid{ width: 70%; margin: 0 auto; margin-bottom: 20px;}
@@ -89,7 +89,7 @@
     </div>
 
     <!-- Used only to display debug informations-->
-    <a href='#stop' id='stop'>STOP</a>
+    <a href='#stop' id='stop'>START</a>
     <a href='./vulns.html' id='export'>LIST</a>
     <div id='debug'>
       <span id='status'>Status Server</span>
